--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Store Name</title>
+    <title>Merly Clothing</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <h1>Your Store Name</h1>
+        <h1>Merly Clothing</h1>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
@@ -45,7 +45,7 @@
     </section>
     
     <footer>
-        <p>&copy; 2025 Your Store Name. All rights reserved.</p>
+        <p>&copy; 2025 Merly Clothing. All rights reserved.</p>
     </footer>
 </body>
 </html>
